--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation libs.appcompat
@@ -41,4 +42,11 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+
+    //...
+    def lifecycle_version = "1.1.1"
+
+    // ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
 }
